@@ -57,7 +57,8 @@ enum SCIP_LPParam
    SCIP_LPPAR_THREADS        = 15,      /**< number of threads used to solve the LP */
    SCIP_LPPAR_CONDITIONLIMIT = 16,      /**< maximum condition number of LP basis counted as stable */
    SCIP_LPPAR_TIMING         = 17,      /**< type of timer (1 - cpu, 2 - wallclock, 0 - off) */
-   SCIP_LPPAR_RANDOMSEED     = 18       /**< inital random seed, e.g. for perturbations in the simplex (0: LP default) */
+   SCIP_LPPAR_RANDOMSEED     = 18,      /**< inital random seed, e.g. for perturbations in the simplex (0: LP default) */
+   SCIP_LPPAR_PERSISTENTSCALING = 19    /**< use persistent LP scaling during branch and bound */
 };
 typedef enum SCIP_LPParam SCIP_LPPARAM;
 
